refactor(back): adjust return of getAllActivities endpoint