@@ -5,8 +5,7 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -36,15 +35,36 @@ public class ActivityService {
      * @return {@code ActivityListResponse} objeto que representa uma lista com os detalhes de cada atividade encontrada
      */
     public ActivityListResponse getAllActivitiesByTripId(UUID tripId) {
-        List<ActivityDetailsDTO> activities = activityRepository
-                .findAllByTripId(tripId)
+        List<Activity> activityList = activityRepository.findAllByTripId(tripId)
                 .stream()
-                .map(activity -> new ActivityDetailsDTO(
-                        activity.getId(),
-                        activity.getTitle(),
-                        activity.getOccursAt()
-                ))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(Activity::getOccursAt))
+                .toList();
+
+        List<ActivitiesDTO> activities = new ArrayList<>();
+
+        for (Activity activity : activityList){
+
+            boolean hasDateActivityRegistered = activities.stream()
+                    .anyMatch(activitiesDTO -> activitiesDTO.getDate().equals(activity.getOccursAt()));
+
+            if (!hasDateActivityRegistered){
+                ActivitiesDTO activitiesDTO = new ActivitiesDTO(activity.getOccursAt(), new ArrayList<>());
+
+                for (Activity compareActivity : activityList){
+                    if (activity.getOccursAt().equals(compareActivity.getOccursAt())){
+                        activitiesDTO.getActivities().add(
+                                new ActivityDetailsDTO(
+                                        compareActivity.getId(),
+                                        compareActivity.getTitle(),
+                                        compareActivity.getOccursAt()
+                                )
+                        );
+                    }
+                }
+
+                activities.add(activitiesDTO);
+            }
+        }
 
         return new ActivityListResponse(activities);
     }
